height fixed for sticky nav bar on mobile devices

--- a/art-website/src/styles/App.css
+++ b/art-website/src/styles/App.css
@@ -106,6 +106,7 @@
         flex-direction: column;
         gap: 10px;
         margin: 10px 0 0 0;
+        height: 100%;
     }
 
     .desktop-nav-bar {
